# mba152-ef7b-family-doctor-find

./: .env.example  .gitignore  .plan  Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/migrations/: 20260720225000_baseline.sql  20260720230500_cities_areas.sql  20260720231500_doctors_clinics.sql  20260720232500_availability_reports.sql  20260720233500_seed_launch_sample_data.sql  20260720234500_geocode_cache.sql
backend/src/: config.rs  main.rs
backend/src/db/: availability_report.rs  city.rs  doctor.rs  mod.rs
backend/src/http/: city_search.rs  confirm_accepting.rs  doctor_detail.rs  doctor_listings.rs  error.rs  health.rs  mod.rs  rate_limit.rs  status_change.rs  validation.rs
backend/src/integrations/: mod.rs  nominatim.rs
backend/src/services/: city_search.rs  confirm_accepting.rs  doctor_detail.rs  doctor_listings.rs  listing_status.rs  mod.rs  status_change.rs
docs/: self-hosted.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.e2e.json
frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx  styles.css
frontend/src/api/: client.ts  hooks.ts  queryClient.ts  types.ts
frontend/src/app/: AppShell.tsx  router.tsx
frontend/src/components/: CityTypeahead.tsx  DoctorResultsList.tsx  DoctorResultsMap.tsx  ReportControls.tsx  ResultsViewToggle.tsx
frontend/src/pages/: CoveragePage.tsx  DoctorDetailPage.tsx  HomePage.tsx  NotFoundPage.tsx  ResultsPage.tsx
frontend/tests/e2e/: search-confirm.smoke.spec.ts
scripts/: build-self-hosted.sh
