[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "chrono",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["fs"] }

[lints]
workspace = true
